Fix width problem overflowing off of right side when entering keyword tags

--- a/public/stylesheets/main.scss
+++ b/public/stylesheets/main.scss
@@ -1,4 +1,5 @@
 #searchField {
+  background-color: transparent !important;
   border: none !important;
   border-radius: 20px;
   color: #444;
@@ -94,7 +95,7 @@ table.dataset {
 }
 
 .delete-keyword {
-  background-color: #aaa;
+  background-color: DarkTurquoise;
   border-radius: 20px;
   margin-left: 3px;
   padding: 1px 3px;
@@ -116,7 +117,6 @@ table.dataset {
   padding: 0 10px;
   position: relative;
   white-space: nowrap;
-  width: 100%;
 }
 
 .input-shader {
@@ -152,7 +152,7 @@ table.dataset {
 }
 
 .post-keyword {
-  background-color: #bdc3c7;
+  background-color: Aqua;
   border-radius: 3px;
   cursor: pointer;
   display: inline-block;
